﻿===== Hasor-Core v0.0.14
* 改进:
    01.fix 日志输出了格式化字符。
    02.fix 多配置文件时候，主配置文件失效问题。

===== Hasor-Core v0.0.13
* 改进:
    01.删除封装的log，采用slf4j。jdk自带的log因为采用了SystemClassLoader导致log失败。
    02.修改测试用例，取消log的封装。

===== Hasor-Core v0.0.12
* 新增:
    01.all-in行动，db和web项目被合并到core，同时合并一些quick插件。
    --DB--
    02.新增 orm 工具包，携带了一个及其简易的数据库操作框架。
    03.新增 SimpleDBModule 工具类，便于为一个数据源配置 事务管理器。
    04.LocalDataSourceHelper 支持每个线程绑定多个数据库连接。
    05.支持7种事务传播属性。
    06.支持隔离级别设置。
    07.支持多数据源。
    08.支持多数据源事务控制（非JPA）
    09.提供@Transactional简单的声明式事务注解。
    10.开发者可以自定义事务拦截器，自定义注解拦截事务。
    11.新增 SavepointDataSourceHelper 接口，并且 DefaultDataSourceHelper 类支持该接口。
    12.新增可以通过 DataSourceUtils 获取当前连接的方法。
    13.通过 net.hasor.db.jdbc 软件包为 Java 应用程序提供了一个轻量化 JDBC 操作接口。
    14.软件包 net.hasor.db.datasource 为 Java 应用程序提供了数据源服务。
    15.增加事务管理器、事务拦截器
    --WEB--
    16.增加 shutdown 生命周期阶段。
    17.更换LoggerHelper为日志输出组件。
    18.环境变量实现接口调整，应用Core改动。
    19.增加 MimeType 获取工具Module。
    20.AnnoWebAppContext 类中增加，下面几个接口的绑定。
        ServletRequest、HttpServletRequest、ServletResponse、HttpServletResponse、HttpSession、ServletContext
    21.新增 JSP Tag 标签库，通过 Hasor JSP 标签库可以方便基于 jsp 的 Hasor 开发。
    --Quick--
    22.新增@Aop注解插件，用于简化Aop声明，只要类通过binder绑定到系统中就会支持。
    23.新增Web请求响应编码设置，默认为UTF-8。
    24.新增资源插件，可以从classpath\path\zip中提取资源作为web响应。
* 改进:
    25.StandardEventManager 改为无锁方式实现。
    26.删除封装的log，采用slf4j。jdk自带的log因为采用了SystemClassLoader导致log失败。
    
===== Hasor-Core v0.0.11
* 修复:
    01.LoggerHelper,修复当多次调用log输出时产生堆栈溢出问题。

===== Hasor-Core v0.0.10
* 新增:
    01.添加org.more.future工具包，用于实现 java.util.concurrent.Future 接口功能。
    02.新增一个 ApiBinderWrap类。
    03.增加 SettingsWarp 工具类。
    04.增加 shutdown 生命周期阶段。
    05.增加 apache 中 toStringBuilter 工具到 org.more.builder。
    06.增添业务基础包org.more.bizcommon（将来如果发展大了会分离出去，目前就几个类）
    07.增添 StartModule 接口。
* 改进:
    01.修复当程序工作在特殊 ClassLoader 下例如 （Web容器中）时，MoreClassLoader类导致 Class 重复加载问题。
    02.优化，AbstractSettings 实现细节，解决在多线程下可能引发的 HashMap 死锁问题。