@@ -19,10 +19,6 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.StringWriter;
-import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.lang.reflect.Proxy;
 import java.nio.charset.Charset;
 import java.sql.CallableStatement;
 import java.sql.Connection;
@@ -40,8 +36,6 @@ import java.util.List;
 import java.util.Map;
 import javax.sql.DataSource;
 import net.hasor.core.Hasor;
-import net.hasor.db.datasource.ConnectionProxy;
-import net.hasor.db.datasource.DataSourceUtils;
 import net.hasor.db.jdbc.BatchPreparedStatementSetter;
 import net.hasor.db.jdbc.CallableStatementCallback;
 import net.hasor.db.jdbc.CallableStatementCreator;
@@ -61,29 +55,17 @@ import net.hasor.db.jdbc.core.mapper.SingleColumnRowMapper;
 import org.more.util.ArrayUtils;
 import org.more.util.ResourcesUtils;
 import org.more.util.io.IOUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 /**
  * 数据库操作模板方法。
  * @version : 2013-10-12
  * @author 赵永春 (zyc@byshell.org)
  */
-public class JdbcTemplate extends JdbcAccessor implements JdbcOperations {
-    protected static Logger logger                 = LoggerFactory.getLogger(JdbcTemplate.class);
+public class JdbcTemplate extends JdbcConnection implements JdbcOperations {
     /*是否忽略出现的 SQL 警告*/
-    private boolean         ignoreWarnings         = true;
-    /*JDBC查询和从结果集里面每次取设置行数，循环去取，直到取完。合理设置该参数可以避免内存异常。
-     * 如果这个变量被设置为非零值,它将被用于设置 statements 的 fetchSize 属性。*/
-    private int             fetchSize              = 0;
-    /*从 JDBC 中可以查询的最大行数。
-     * 如果这个变量被设置为非零值,它将被用于设置 statements 的 maxRows 属性。*/
-    private int             maxRows                = 0;
-    /*从 JDBC 中可以查询的最大行数。
-     * 如果这个变量被设置为非零值,它将被用于设置 statements 的 queryTimeout 属性。*/
-    private int             queryTimeout           = 0;
+    private boolean ignoreWarnings         = true;
     /*当JDBC 结果集中如出现相同的列名仅仅大小写不同时。是否保留大小写列名敏感。
      * 如果为 true 表示敏感，并且结果集Map中保留两个记录。如果为 false 则表示不敏感，如出现冲突列名后者将会覆盖前者。*/
-    private boolean         resultsCaseInsensitive = false;
+    private boolean resultsCaseInsensitive = false;
     //
     //
     //
@@ -92,17 +74,24 @@ public class JdbcTemplate extends JdbcAccessor implements JdbcOperations {
      * <p>Note: The DataSource has to be set before using the instance.
      * @see #setDataSource
      */
-    public JdbcTemplate() {}
+    public JdbcTemplate() {
+        super();
+    }
     /**
      * Construct a new JdbcTemplate, given a DataSource to obtain connections from.
      * <p>Note: This will not trigger initialization of the exception translator.
      * @param dataSource the JDBC DataSource to obtain connections from
      */
     public JdbcTemplate(final DataSource dataSource) {
-        this.setDataSource(dataSource);
+        super(dataSource);
     }
+    /**
+     * Construct a new JdbcTemplate, given a DataSource to obtain connections from.
+     * <p>Note: This will not trigger initialization of the exception translator.
+     * @param dataSource the JDBC DataSource to obtain connections from
+     */
     public JdbcTemplate(final Connection conn) {
-        this.setConnection(conn);
+        super(conn);
     }
     //
     //
@@ -112,24 +101,6 @@ public class JdbcTemplate extends JdbcAccessor implements JdbcOperations {
     }
     public void setIgnoreWarnings(final boolean ignoreWarnings) {
         this.ignoreWarnings = ignoreWarnings;
-    }
-    public int getFetchSize() {
-        return this.fetchSize;
-    }
-    public void setFetchSize(final int fetchSize) {
-        this.fetchSize = fetchSize;
-    }
-    public int getMaxRows() {
-        return this.maxRows;
-    }
-    public void setMaxRows(final int maxRows) {
-        this.maxRows = maxRows;
-    }
-    public int getQueryTimeout() {
-        return this.queryTimeout;
-    }
-    public void setQueryTimeout(final int queryTimeout) {
-        this.queryTimeout = queryTimeout;
     }
     public boolean isResultsCaseInsensitive() {
         return this.resultsCaseInsensitive;
@@ -170,31 +141,6 @@ public class JdbcTemplate extends JdbcAccessor implements JdbcOperations {
     //
     //
     //
-    @Override
-    public <T> T execute(final ConnectionCallback<T> action) throws SQLException {
-        Hasor.assertIsNotNull(action, "Callback object must not be null");
-        //
-        Connection con = this.getConnection();
-        boolean useLocal = false;
-        if (con == null) {
-            DataSource ds = this.getDataSource();//获取数据源
-            con = DataSourceUtils.getConnection(ds);//申请本地连接（和当前线程绑定的连接）
-            useLocal = true;
-            con = this.newProxyConnection(con, ds);//代理连接
-        } else {
-            con = this.newProxyConnection(con, null);//代理连接
-        }
-        //
-        try {
-            return action.doInConnection(con);
-        } catch (SQLException ex) {
-            throw ex;
-        } finally {
-            if (useLocal) {
-                DataSourceUtils.releaseConnection(con, this.getDataSource());//关闭或释放连接
-            }
-        }
-    }
     @Override
     public <T> T execute(final StatementCallback<T> action) throws SQLException {
         Hasor.assertIsNotNull(action, "Callback object must not be null");
@@ -850,18 +796,6 @@ public class JdbcTemplate extends JdbcAccessor implements JdbcOperations {
     protected PreparedStatementSetter newArgPreparedStatementSetter(final Object[] args) throws SQLException {
         return new InnerArgPreparedStatementSetter(args);
     }
-    /**对Statement的属性进行设置。设置 JDBC Statement 对象的 fetchSize、maxRows、Timeout等参数。*/
-    protected void applyStatementSettings(final Statement stmt) throws SQLException {
-        int fetchSize = this.getFetchSize();
-        if (fetchSize > 0)
-            stmt.setFetchSize(fetchSize);
-        int maxRows = this.getMaxRows();
-        if (maxRows > 0)
-            stmt.setMaxRows(maxRows);
-        int timeout = this.getQueryTimeout();
-        if (timeout > 0)
-            stmt.setQueryTimeout(timeout);
-    }
     /**
      * Build a PreparedStatementCreator based on the given SQL and named parameters.
      * <p>Note: Not used for the <code>update</code> variant with generated key handling.
@@ -916,54 +850,11 @@ public class JdbcTemplate extends JdbcAccessor implements JdbcOperations {
             throw new SQLException("Incorrect column count: expected 1, actual " + size);
         return results.iterator().next();
     }
-    /**获取与本地线程绑定的数据库连接，JDBC 框架会维护这个连接的事务。开发者不必关心该连接的事务管理，以及资源释放操作。*/
-    private Connection newProxyConnection(final Connection target, final DataSource targetSource) {
-        Hasor.assertIsNotNull(target, "Connection is null.");
-        CloseSuppressingInvocationHandler handler = new CloseSuppressingInvocationHandler(target, targetSource);
-        return (Connection) Proxy.newProxyInstance(ConnectionProxy.class.getClassLoader(), new Class[] { ConnectionProxy.class }, handler);
-    }
     //
     //
     /**获取SQL*/
     protected static interface SqlProvider {
         public String getSql();
-    }
-    /**Connection 接口代理，目的是为了控制一些方法的调用。同时进行一些特殊类型的处理。*/
-    private class CloseSuppressingInvocationHandler implements InvocationHandler {
-        private final Connection target;
-        private final DataSource targetSource;
-        public CloseSuppressingInvocationHandler(final Connection target, final DataSource targetSource) {
-            this.target = target;
-            this.targetSource = targetSource;
-        }
-        @Override
-        public Object invoke(final Object proxy, final Method method, final Object[] args) throws Throwable {
-            // Invocation on ConnectionProxy interface coming in...
-            if (method.getName().equals("getTargetConnection"))
-                // Handle getTargetConnection method: return underlying Connection.
-                return this.target;
-            else if (method.getName().equals("getTargetSource"))
-                // Handle getTargetConnection method: return underlying DataSource.
-                return this.targetSource;
-            else if (method.getName().equals("equals"))
-                // Only consider equal when proxies are identical.
-                return proxy == args[0];
-            else if (method.getName().equals("hashCode"))
-                // Use hashCode of PersistenceManager proxy.
-                return System.identityHashCode(proxy);
-            else if (method.getName().equals("close"))
-                return null;
-            // Invoke method on target Connection.
-            try {
-                Object retVal = method.invoke(this.target, args);
-                // If return value is a JDBC Statement, apply statement settings (fetch size, max rows, transaction timeout).
-                if (retVal instanceof Statement)
-                    JdbcTemplate.this.applyStatementSettings((Statement) retVal);
-                return retVal;
-            } catch (InvocationTargetException ex) {
-                throw ex.getTargetException();
-            }
-        }
     }
     /**接口 {@link PreparedStatementCreator} 的简单实现，目的是根据 SQL 语句创建 {@link PreparedStatement}对象。*/
     private static class SimplePreparedStatementCreator implements PreparedStatementCreator, JdbcTemplate.SqlProvider {
